# Causal-RL

./: .dockerignore  .gitignore  Dockerfile  IEEM_submission_assets.md  Makefile  README.md  causalog_full_data_dictionary_v2.json  outline.md  paper_methodology.md  pyproject.toml  requirements.txt  reward_weight_calibration.csv
artifacts/: dataset_metadata.json
causal_rl/: __init__.py  benchmark_runtime.py  build_dataset.py  claim_boundary.py  config.py  dataset.py  evaluate.py  ground_truth_benchmark.py  ope.py  parallel.py  policy_learning.py  report.py  reward_calibration.py  theorem_assumptions.py  train_policies.py
models/: behavior_model.joblib  causal_fqi.joblib  causal_no_history_fqi.joblib  causal_no_vehicle_id_fqi.joblib  heuristic_model.joblib  minimal_fqi.joblib  non_causal_fqi.joblib  outcome_targets.joblib  policy_summary.json  reward_outcome_model.joblib
paper/: paper.tex
results/: ablation_comparison.csv  bootstrap_summary.csv  cluster_bootstrap_summary.csv  common_support_diagnostics.csv  estimator_diagnostics.csv  feature_importance.csv  fqe_convergence.csv  interpretation_summary.csv  late_day_diagnosis.csv  main_results_table.csv  metrics.csv  policy_actions.csv  reward_sensitivity.csv  robustness.csv  support_threshold_sweep.csv
tests/: test_dataset.py  test_evaluate.py  test_paper_artifact_consistency.py  test_policy_learning.py  test_semantic_alignment.py
